--- a/Datonate/index.html
+++ b/Datonate/index.html
@@ -41,7 +41,38 @@
       <div class="banner-text text-center">
         <h1>Annotating Data is now simpler than ever.</h1>
         <p>Datanote is a tool for mobile users that will give them the ability to perform data annotation tasks in exchange for small amounts of money. The data would be provided by researchers for their personal research purposes</p>
-        <a href="#" class="btn btn-large">Log in</a> </div>
+        <!-- Log in button -->
+        <a href="#" class="btn btn-large" data-toggle="modal" data-target="#myModal">Log in</a> </div>
+        <!-- Modal -->
+        <div class="modal fade" id="myModal" role="dialog">
+        <div class="modal-dialog">
+        <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title">Log in into your account.</h4>
+        </div>
+        <div class="modal-body">
+          <form role="form" onsubmit="return login('form');">
+            <div class="form-group">
+              <label for="email">Email:</label>
+              <input type="email" class="form-control" id="email" placeholder="Enter email">
+            </div>
+            <div class="form-group">
+              <label for="pwd">Password:</label>
+              <input type="password" class="form-control" id="pwd" placeholder="Enter password">
+            </div>
+            <button type="submit" class="btn btn-primary" style="padding: 10px 30px;">Log In</button>
+            <div id="LoginFail" style="color: red;"></div>
+            <br>
+            <a href="templates/registration.html">Don't have an account? Sign Up!</a>
+            <br>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+
       <!-- banner text --> 
     </div>
   </div>
