--- a/Datonate/index.html
+++ b/Datonate/index.html
@@ -7,109 +7,135 @@
 <!--<![endif]-->
 
 <head>
-<meta charset="utf-8">
-<meta name="description" content="">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Datonate</title>
-<link rel="stylesheet" href="css/bootstrap.min.css">
-<link rel="stylesheet" href="css/flexslider.css">
-<link rel="stylesheet" href="css/jquery.fancybox.css">
-<link rel="stylesheet" href="css/main.css">
-<link rel="stylesheet" href="css/responsive.css">
-<link rel="stylesheet" href="css/font-icon.css">
-<link rel="stylesheet" href="css/animate.min.css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+  <meta charset="utf-8">
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Datonate</title>
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/flexslider.css">
+  <link rel="stylesheet" href="css/jquery.fancybox.css">
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/responsive.css">
+  <link rel="stylesheet" href="css/font-icon.css">
+  <link rel="stylesheet" href="css/animate.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/bootstrap-social.css">
+</head>
 </head>
 
 <body>
-<!-- header section -->
-<section class="banner" role="banner">
-  <header id="header">
-    <div class="header-content clearfix"> <a class="logo" href="index.html">DATONATE</a>
-      <nav class="navigation" role="navigation">
-        <ul class="primary-nav">
-          <li><a href="#intro">About</a></li>
-          <li><a href="#teams">Our Team</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-      </nav>
-      <a href="#" class="nav-toggle">Menu<span></span></a> </div>
-  </header>
-  <!-- banner text -->
-  <div class="container">
-    <div class="col-md-10 col-md-offset-1">
-      <div class="banner-text text-center">
-        <h1>Annotating Data is now simpler than ever.</h1>
-        <p>Datanote is a tool for mobile users that will give them the ability to perform data annotation tasks in exchange for small amounts of money. The data would be provided by researchers for their personal research purposes</p>
-        <!-- Log in button -->
-        <a href="#" class="btn btn-large" data-toggle="modal" data-target="#myModal">Log in</a> </div>
-        <!-- Modal -->
-        <div class="modal fade" id="myModal" role="dialog">
-        <div class="modal-dialog">
-        <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">Log in into your account.</h4>
-        </div>
-        <div class="modal-body">
-          <form role="form" onsubmit="return login('form');">
-            <div class="form-group">
-              <label for="email">Email:</label>
-              <input type="email" class="form-control" id="email" placeholder="Enter email">
-            </div>
-            <div class="form-group">
-              <label for="pwd">Password:</label>
-              <input type="password" class="form-control" id="pwd" placeholder="Enter password">
-            </div>
-            <button type="submit" class="btn btn-primary" style="padding: 10px 30px;">Log In</button>
-            <div id="LoginFail" style="color: red;"></div>
-            <br>
-            <a href="templates/registration.html">Don't have an account? Sign Up!</a>
-            <br>
-          </form>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+  <!-- header section -->
+  <section class="banner" role="banner">
+    <header id="header">
+      <div class="header-content clearfix"> <a class="logo" href="index.html">DATONATE</a>
+        <nav class="navigation" role="navigation">
+          <ul class="primary-nav">
+            <li><a href="#intro">About</a></li>
+            <li><a href="#teams">Our Team</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </nav>
+        <a href="#" class="nav-toggle">Menu<span></span></a>
+      </div>
+    </header>
+    <div class="container">
+      <div class="col-md-10 col-md-offset-1">
+        <div class="banner-text text-center">
+          <h1>Annotating Data is now simpler than ever.</h1>
+          <p>Datanote is a tool for mobile users that will give them the ability to perform data annotation tasks in exchange for small amounts of money. The data would be provided by researchers for their personal research purposes</p>
+          <!-- Log in button -->
+          <a href="#" id = "log-in-btn"class="btn btn-large" data-toggle="modal" data-target="#myModal">Log in</a>
         </div>
       </div>
-
-      <!-- banner text --> 
+    </div> 
+    <!-- Modal -->
+    <div class="modal fade" id="myModal" role="dialog">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <h4 class="modal-title login-div">Log in into your account.</h4>
+            <h4 class="modal-title reset-div">Reset Password</h4>
+          </div>
+          <div class="modal-body">
+            <div class="login-div">  
+              <form role="form" onsubmit="return login('form');">
+                <div class="form-group">
+                  <input type="email" class="form-control" id="email" placeholder="Enter email">
+                </div>
+                <div class="form-group">
+                  <input type="password" class="form-control" id="pwd" placeholder="Enter password">
+                </div>
+                <div class="modal-btn">
+                  <button type="submit" class="btn btn-primary">Log In</button>
+                  <a class="btn btn-block btn-social btn-facebook">
+                    <span class="fa fa-facebook"></span> Facebook
+                  </a>
+                  <a class="btn btn-block btn-social btn-google">
+                   <span class="fa fa-google"></span> Google
+                  </a>
+                  <div id="LoginFail" style="color: red;"></div>
+                  <div class="clear"></div>
+                </div>  
+                <a href="templates/registration.html">Don't have an account? Sign Up!</a>
+                <br>
+                <a href="#" class="forgot-password">Forgot Password?</a>
+                <br>
+              </form>
+            </div>
+            <div class="reset-div">
+              <form role="form" onsubmit="return login('form');">
+                <div class="form-group">
+                  <label for="email">Email:</label>
+                  <input type="email" class="form-control" id="email" placeholder="Enter email">
+                </div>
+                <button type="submit" class="btn btn-primary" style="padding: 10px 30px;">Submit</button>
+                <div id="LoginFail" style="color: red;"></div>
+              </form>
+            </div>  
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default login-div" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-default reset-div back">Back</button>
+          </div>
+        </div> 
+      </div>
     </div>
-  </div>
-</section>
-<!-- header section --> 
-<!-- intro section -->
-<section id="intro" class="section intro">
-  <div class="container">
-    <div class="col-md-8 col-md-offset-2 text-center">
-      <h3>We've got what you need!</h3>
-      <p>The days of going through the tenuous process of unravelling external links for freelance tasks are over. Now, freelancers can perform basic data annotation tasks on the interface provided by our app itself. Our system will enable a much more smooth experience for both the participant and the researcher. This is because the participant benefits from having a single interface, the researcher can simply upload the data to our database, thus, he/she doesn’t have to worry about hosting data and maintaining links to it.
-</p>
+    <!-- Modal -->
+  </section>
+  <!-- header section --> 
+  <!-- intro section -->
+  <section id="intro" class="section intro">
+    <div class="container">
+      <div class="col-md-8 col-md-offset-2 text-center">
+        <h3>We've got what you need!</h3>
+        <p>The days of going through the tenuous process of unravelling external links for freelance tasks are over. Now, freelancers can perform basic data annotation tasks on the interface provided by our app itself. Our system will enable a much more smooth experience for both the participant and the researcher. This is because the participant benefits from having a single interface, the researcher can simply upload the data to our database, thus, he/she doesn’t have to worry about hosting data and maintaining links to it.
+        </p>
+      </div>
     </div>
-  </div>
-</section>
-<!-- intro section --> 
+  </section>
+  <!-- intro section --> 
 
-<!-- work section -->
+  <!-- work section -->
 
-<!-- work section --> 
-<!-- our team section -->
-<!-- our team section --> 
-<!-- Testimonials section -->
-<!-- Testimonials section --> 
+  <!-- work section --> 
+  <!-- our team section -->
+  <!-- our team section --> 
+  <!-- Testimonials section -->
+  <!-- Testimonials section --> 
 
-<!-- contact section -->
-<!-- contact section --> 
-<!-- Footer section -->
-<!-- Footer section --> 
-<!-- JS FILES --> 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> 
-<script src="js/bootstrap.min.js"></script> 
-<script src="js/jquery.flexslider-min.js"></script> 
-<script src="js/jquery.fancybox.pack.js"></script> 
-<script src="js/retina.min.js"></script> 
-<script src="js/modernizr.js"></script> 
-<script src="js/main.js"></script> 
-<script type="text/javascript" src="js/jquery.contact.js"></script>
+  <!-- contact section -->
+  <!-- contact section --> 
+  <!-- Footer section -->
+  <!-- Footer section --> 
+  <!-- JS FILES --> 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> 
+  <script src="js/bootstrap.min.js"></script> 
+  <script src="js/jquery.flexslider-min.js"></script> 
+  <script src="js/jquery.fancybox.pack.js"></script> 
+  <script src="js/retina.min.js"></script> 
+  <script src="js/modernizr.js"></script> 
+  <script src="js/main.js"></script> 
+  <script type="text/javascript" src="js/jquery.contact.js"></script>
 </body>
 </html>
