--- a/Datonate/index.html
+++ b/Datonate/index.html
@@ -56,6 +56,7 @@
             <button type="button" class="close" data-dismiss="modal">&times;</button>
             <h4 class="modal-title login-div">Log in into your account.</h4>
             <h4 class="modal-title reset-div">Reset Password</h4>
+            <h4 class="modal-title registration-div">Create an account</h4>
           </div>
           <div class="modal-body">
             <div class="login-div">  
@@ -73,69 +74,117 @@
                   </a>
                   <a class="btn btn-block btn-social btn-google">
                    <span class="fa fa-google"></span> Google
-                  </a>
-                  <div id="LoginFail" style="color: red;"></div>
-                  <div class="clear"></div>
-                </div>  
-                <a href="templates/registration.html">Don't have an account? Sign Up!</a>
-                <br>
-                <a href="#" class="forgot-password">Forgot Password?</a>
-                <br>
-              </form>
+                 </a>
+                 <div id="LoginFail" style="color: red;"></div>
+                 <div class="clear"></div>
+               </div>  
+               <a href="#" class="sign-up">Don't have an account? Sign Up!</a>
+               <br>
+               <a href="#" class="forgot-password">Forgot Password?</a>
+               <br>
+             </form>
+           </div>
+           <div class="reset-div">
+            <form role="form" onsubmit="return login('form');">
+              <div class="form-group">
+                <label for="email">Email:</label>
+                <input type="email" class="form-control" id="email" placeholder="Enter email">
+              </div>
+              <button type="submit" class="btn btn-primary" style="padding: 10px 30px;">Submit</button>
+              <div id="LoginFail" style="color: red;"></div>
+            </form>
+          </div>
+          <div class="registration-div">
+            <form id="register" onsubmit="return register_valid('register');">
+              <div class="form-group row">
+
+              </div>
+              <div class="form-group row">
+               <label for="FirstName" class="col-sm-2 form-control-label">First Name</label>
+               <div class="col-sm-10">
+                 <input type="text" class="form-control" id="FirstName" name="firstname" placeholder="Jane">
+               </div>
+             </div>
+             <div class="form-group row">
+               <label for="LastName" class="col-sm-2 form-control-label">Last Name</label>
+               <div class="col-sm-10">
+                 <input type="text" class="form-control" id="LastName" name="lastname" placeholder="Doe">
+               </div>
+             </div>
+             <div class="form-group row">
+               <label for="phone" class="col-sm-2 form-control-label">Phone Number</label>
+               <div class="col-sm-10">
+
+                 <input type="number" min=1000000000 max=9999999999 class="form-control" id="phone" name="phone" placeholder="7651237890">
+               </div>
+               <label class="col-sm-2 form-control-label" id="CheckPUID"></label>
+             </div>
+             <div class="form-group row">
+              <label for="Email" class="col-sm-2 form-control-label">Purdue Email</label>
+              <div class="col-sm-10">
+                <input type="email" class="form-control" id="Email" name="email" placeholder="Email">
+              </div>
+              <label class="col-sm-2 form-control-label" id="CheckEmail"></label>
             </div>
-            <div class="reset-div">
-              <form role="form" onsubmit="return login('form');">
-                <div class="form-group">
-                  <label for="email">Email:</label>
-                  <input type="email" class="form-control" id="email" placeholder="Enter email">
-                </div>
-                <button type="submit" class="btn btn-primary" style="padding: 10px 30px;">Submit</button>
-                <div id="LoginFail" style="color: red;"></div>
-              </form>
-            </div>  
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-default login-div" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-default reset-div back">Back</button>
-          </div>
-        </div> 
+            <div class="form-group row">
+              <label for="Password" class="col-sm-2 form-control-label">Password</label>
+              <div class="col-sm-10">
+                <input type="password" class="form-control" id="Password" name="password" placeholder="Password">
+              </div>
+            </div>
+            <div class="form-group row">
+              <label for="Passwordconfirm" class="col-sm-2 form-control-label">Confirm Password</label>
+              <div class="col-sm-10">
+                <input type="password" class="form-control" id="Passwordconfirm" name="passwordconfirm" placeholder="Confirm Password">
+              </div>
+            </div>
+            <button type="submit" class="btn btn-primary" style="padding: 10px 30px;">Submit</button>
+          </form>
+        </div>  
       </div>
-    </div>
-    <!-- Modal -->
-  </section>
-  <!-- header section --> 
-  <!-- intro section -->
-  <section id="intro" class="section intro">
-    <div class="container">
-      <div class="col-md-8 col-md-offset-2 text-center">
-        <h3>We've got what you need!</h3>
-        <p>The days of going through the tenuous process of unravelling external links for freelance tasks are over. Now, freelancers can perform basic data annotation tasks on the interface provided by our app itself. Our system will enable a much more smooth experience for both the participant and the researcher. This is because the participant benefits from having a single interface, the researcher can simply upload the data to our database, thus, he/she doesn’t have to worry about hosting data and maintaining links to it.
-        </p>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default login-div" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-default reset-div back">Back</button>
+        <button type="button" class="btn btn-default registration-div back">Back</button>
       </div>
+    </div> 
+  </div>
+</div>
+<!-- Modal -->
+</section>
+<!-- header section --> 
+<!-- intro section -->
+<section id="intro" class="section intro">
+  <div class="container">
+    <div class="col-md-8 col-md-offset-2 text-center">
+      <h3>We've got what you need!</h3>
+      <p>The days of going through the tenuous process of unravelling external links for freelance tasks are over. Now, freelancers can perform basic data annotation tasks on the interface provided by our app itself. Our system will enable a much more smooth experience for both the participant and the researcher. This is because the participant benefits from having a single interface, the researcher can simply upload the data to our database, thus, he/she doesn’t have to worry about hosting data and maintaining links to it.
+      </p>
     </div>
-  </section>
-  <!-- intro section --> 
+  </div>
+</section>
+<!-- intro section --> 
 
-  <!-- work section -->
+<!-- work section -->
 
-  <!-- work section --> 
-  <!-- our team section -->
-  <!-- our team section --> 
-  <!-- Testimonials section -->
-  <!-- Testimonials section --> 
+<!-- work section --> 
+<!-- our team section -->
+<!-- our team section --> 
+<!-- Testimonials section -->
+<!-- Testimonials section --> 
 
-  <!-- contact section -->
-  <!-- contact section --> 
-  <!-- Footer section -->
-  <!-- Footer section --> 
-  <!-- JS FILES --> 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> 
-  <script src="js/bootstrap.min.js"></script> 
-  <script src="js/jquery.flexslider-min.js"></script> 
-  <script src="js/jquery.fancybox.pack.js"></script> 
-  <script src="js/retina.min.js"></script> 
-  <script src="js/modernizr.js"></script> 
-  <script src="js/main.js"></script> 
-  <script type="text/javascript" src="js/jquery.contact.js"></script>
+<!-- contact section -->
+<!-- contact section --> 
+<!-- Footer section -->
+<!-- Footer section --> 
+<!-- JS FILES --> 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> 
+<script src="js/bootstrap.min.js"></script> 
+<script src="js/jquery.flexslider-min.js"></script> 
+<script src="js/jquery.fancybox.pack.js"></script> 
+<script src="js/retina.min.js"></script> 
+<script src="js/modernizr.js"></script> 
+<script src="js/main.js"></script> 
+<script type="text/javascript" src="js/jquery.contact.js"></script>
 </body>
 </html>
