--- a/Datonate/index.html
+++ b/Datonate/index.html
@@ -60,15 +60,15 @@
           </div>
           <div class="modal-body">
             <div class="login-div">  
-              <form role="form" onsubmit="return login('form');">
+              <form role="form" id="form-login" action="#">
                 <div class="form-group">
-                  <input type="email" class="form-control" id="email" placeholder="Enter email">
+                  <input type="email" class="form-control" id="email-login" placeholder="Enter email">
                 </div>
                 <div class="form-group">
-                  <input type="password" class="form-control" id="pwd" placeholder="Enter password">
+                  <input type="password" class="form-control" id="pwd-login" placeholder="Enter password">
                 </div>
                 <div class="modal-btn">
-                  <button type="submit" class="btn btn-primary">Log In</button>
+                  <button type="submit" id="submit-login" class="btn btn-primary">Log In</button>
                   <a class="btn btn-block btn-social btn-facebook">
                     <span class="fa fa-facebook"></span> Facebook
                   </a>
@@ -186,5 +186,26 @@
 <script src="js/modernizr.js"></script> 
 <script src="js/main.js"></script> 
 <script type="text/javascript" src="js/jquery.contact.js"></script>
+
+<script>
+$( document ).ready(function() {
+  $("#form-login").submit(function(){
+  var emailID = $("#email-login").val()
+  var pwd = $("#pwd-login").val()
+  var baseUrl = "http://467a1d51.ngrok.io"
+  var endpoint = "/api/login"
+
+  var finalURL = baseUrl+endpoint
+  $.get(finalURL, { email: emailID, password:pwd }).done(function(data){
+    if(data['status'] == 200){
+      alert("login successfull");
+    }
+  });
+});
+
+});
+
+
+</script>
 </body>
 </html>
