Removed redundant stuff from Landing Page + UI changes to dashboard

--- a/Datonate/static/upload.html
+++ b/Datonate/static/upload.html
@@ -79,6 +79,7 @@
                         <br>
                         <input type="file" class="form-control-file" id="dataset-input" aria-describedby="fileHelp">
                     </div>
+                    <button type="button" class="btn btn-primary btn-lg">Upload Dataset</button>
                 </form>
             </div>
         </div>
