--- a/Datonate/static/dashboard.html
+++ b/Datonate/static/dashboard.html
@@ -10,6 +10,7 @@
 
     <title>Welcome</title>
 
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
